# biobase

./: .gitignore  README.md  REFERENCES.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
Lib/: amino_acid.py  matrix.py  nucleic_acid.py  translation.py
Lib/matrices/: BLOSUM45.json  BLOSUM50.json  BLOSUM62.json  BLOSUM80.json  BLOSUM90.json  PAM250.json  PAM30.json  PAM70.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
src/biobase/: matrix.py
src/biobase/analysis/: __init__.py  cai.py  entropy.py  motif.py  nucleic_analysis.py
src/biobase/constants/: __init__.py  amino_acid.py  nucleic_acid.py  rna_seq.py
src/biobase/constants/analysis/: motif.py  nucleic_analysis.py
src/biobase/matrices/text_matrices/: BLOSUM50.txt
src/biobase/matrix/: __init__.py  matrix.py  sub_matrix.py
src/biobase/parser/: __init__.py  fasta.py  fastq.py  genbank.py
src/biobase/read/: __init__.py
tests/: test_cai.py  test_fasta.py  test_fastq.py  test_genbank.py  test_loading_json.py  test_matrix.py  test_motif.py  test_nucleic_analysis.py
