[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biobase"
version = "0.4.1"
authors = [
	{ name ="Andrew Hennis", email="andrew.mr.hennis@gmail.com" },
]
description = "A comprehensive package of biological constants, serving as a foundational resource for biology and bioinformatics, complemented by functions to streamline related tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/lignum-vitae/biobase"
Issues = "https://github.com/lignum-vitae/biobase/issues"
